--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <ServerGarbageCollection>false</ServerGarbageCollection>
+    <Version>1.3.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
