--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,14 +18,16 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '3.1.102'
+    version: '3.1.x'
 
 - task: Npm@1
   inputs:
     command: 'install'
     workingDir: 'SailScores.Web'
+- script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
+  displayName: Set the tag name as an environment variable
 
-- script: dotnet build --configuration $(buildConfiguration)
+- script: dotnet build --configuration $(buildConfiguration) -p:Version=$(VERSION_TAG) /p:SourceRevisionId=$(Build.SourceVersion)
   displayName: 'dotnet build $(buildConfiguration) /p:SourceRevisionId=$(Build.SourceVersion)'
 - script: 'echo -e "$(Build.BuildNumber)\n$(Build.BuildId)" > .buildinfo.json'
   displayName: "Emit build number"
