--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  rid: 'linux-x64'
 
 steps:
 - task: UseDotNet@2
@@ -24,22 +25,29 @@ steps:
   inputs:
     command: 'install'
     workingDir: 'SailScores.Web'
+
 - script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
   displayName: Set the tag name as an environment variable
 
-- script: dotnet build --configuration $(buildConfiguration) -p:Version=$(VERSION_TAG) /p:SourceRevisionId=$(Build.SourceVersion)
+- task: DotNetCoreCLI@2
   displayName: 'dotnet build $(buildConfiguration)'
+  inputs:
+    command: 'build'
+    arguments: '-r $(rid) --configuration $(buildConfiguration) /p:Version=$(VERSION_TAG) /p:SourceRevisionId=$(Build.SourceVersion)'
+
 - script: 'echo -e "$(Build.BuildNumber)\n$(Build.BuildId)" > .buildinfo.json'
   displayName: "Emit build number"
   workingDirectory: '$(Build.SourcesDirectory)/SailScores.Web'
   failOnStderr: true
+
 - task: DotNetCoreCLI@2
   displayName: "Publish"
   inputs:
     command: 'publish'
     publishWebProjects: true
-    arguments: '--configuration $(BuildConfiguration) --no-build'
+    arguments: '-r $(rid) --configuration $(BuildConfiguration) --no-build'
     zipAfterPublish: True
+
 - task: AzureRmWebAppDeployment@4
   displayName: "Deploy to Prod"
   inputs:
