--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,31 +25,22 @@ steps:
   inputs:
     command: 'install'
     workingDir: 'SailScores.Web'
-
 - script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
   displayName: Set the tag name as an environment variable
 
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet build $(buildConfiguration)'
-  inputs:
-    command: 'build'
-    arguments: '-r $(rid) --configuration $(buildConfiguration) /p:Version=$(VERSION_TAG) /p:SourceRevisionId=$(Build.SourceVersion)'
+- script: dotnet build -r $(rid) --configuration $(buildConfiguration) -p:Version=$(VERSION_TAG) -p:SourceRevisionId=$(Build.SourceVersion)
+  displayName: 'dotnet build $(buildConfiguration) /p:SourceRevisionId=$(Build.SourceVersion)'
 
 - script: 'echo -e "$(Build.BuildNumber)\n$(Build.BuildId)" > .buildinfo.json'
   displayName: "Emit build number"
   workingDirectory: '$(Build.SourcesDirectory)/SailScores.Web'
   failOnStderr: true
-
 - task: DotNetCoreCLI@2
-  displayName: "Publish"
   inputs:
     command: 'publish'
     publishWebProjects: true
-    arguments: '-r $(rid) --configuration $(BuildConfiguration) -p:Version=$(VERSION_TAG) -p:SourceRevisionId=$(Build.SourceVersion)'
-    zipAfterPublish: True
-
+    arguments: '-r $(rid) --configuration $(buildConfiguration) -p:Version=$(VERSION_TAG) -p:SourceRevisionId=$(Build.SourceVersion)'
 - task: AzureRmWebAppDeployment@4
-  displayName: "Deploy to Prod"
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Pay-As-You-Go(f7df2a10-9d9b-4209-a82e-72626aa77ee8)'
