--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,6 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
-  rid: 'linux-x64'
 
 steps:
 - task: UseDotNet@2
@@ -28,9 +27,8 @@ steps:
 - script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
   displayName: Set the tag name as an environment variable
 
-- script: dotnet build -r $(rid) --configuration $(buildConfiguration) -p:Version=$(VERSION_TAG) -p:SourceRevisionId=$(Build.SourceVersion)
+- script: dotnet build --configuration $(buildConfiguration) -p:Version=$(VERSION_TAG) /p:SourceRevisionId=$(Build.SourceVersion)
   displayName: 'dotnet build $(buildConfiguration) /p:SourceRevisionId=$(Build.SourceVersion)'
-
 - script: 'echo -e "$(Build.BuildNumber)\n$(Build.BuildId)" > .buildinfo.json'
   displayName: "Emit build number"
   workingDirectory: '$(Build.SourcesDirectory)/SailScores.Web'
@@ -39,7 +37,6 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: true
-    arguments: '-r $(rid) --configuration $(buildConfiguration) -p:Version=$(VERSION_TAG) -p:SourceRevisionId=$(Build.SourceVersion)'
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
