--- a/azure-pipelines-prod-deploy.yml
+++ b/azure-pipelines-prod-deploy.yml
@@ -13,6 +13,7 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  rid: 'linux-x64'
 
 steps:
 - task: UseDotNet@2
@@ -27,8 +28,13 @@ steps:
 - script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
   displayName: Set the tag name as an environment variable
 
-- script: dotnet build --configuration $(buildConfiguration) -p:Version=$(VERSION_TAG) /p:SourceRevisionId=$(Build.SourceVersion)
-  displayName: 'dotnet build $(buildConfiguration) /p:SourceRevisionId=$(Build.SourceVersion)'
+      
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet build $(buildConfiguration)'
+  inputs:
+    command: 'build'
+    arguments: '-r $(rid) --configuration $(buildConfiguration) -p:SourceRevisionId=$(Build.SourceVersion) -p:Version=$(VERSION_TAG)'
+
 - script: 'echo -e "$(Build.BuildNumber)\n$(Build.BuildId)" > .buildinfo.json'
   displayName: "Emit build number"
   workingDirectory: '$(Build.SourcesDirectory)/SailScores.Web'
@@ -36,7 +42,11 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
+    arguments: '-r $(rid) --configuration $(BuildConfiguration) -p:Version=$(VERSION_TAG) -p:SourceRevisionId=$(Build.SourceVersion)'
     publishWebProjects: true
+    zipAfterPublish: true
+
+    # ASP.NET
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
