--- a/azure-pipeline-test-deploy.yml
+++ b/azure-pipeline-test-deploy.yml
@@ -25,7 +25,15 @@ steps:
 - script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
   displayName: Set the tag name as an environment variable
 
-      
+- task: SonarCloudPrepare@1
+  displayName: 'Prepare analysis configuration'
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'jbfraser1-github'
+    scannerMode: 'MSBuild'
+    projectKey: 'jbfraser1_SailScores'
+    projectName: 'SailScores'
+
 - task: DotNetCoreCLI@2
   displayName: 'dotnet build $(buildConfiguration)'
   inputs:
@@ -36,6 +44,16 @@ steps:
   displayName: "Emit build number"
   workingDirectory: '$(Build.SourcesDirectory)/SailScores.Web'
   failOnStderr: true
+
+
+- task: SonarCloudAnalyze@1
+  displayName: 'Run SonarCloud analysis'
+
+- task: SonarCloudPublish@1
+  displayName: 'Publish results on build summary'
+  inputs:
+    pollingTimeoutSec: '300'
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
