--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -68,11 +68,11 @@
     <Folder Include="Data\" />
     <Folder Include="Models\Calendar\" />
     <Folder Include="Views\Error\" />
+    <Folder Include="wwwroot\images\help\" />
     <Folder Include="wwwroot\lib\" />
     <Folder Include="wwwroot\vendor\bootstrap\js\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="wwwroot\images\help\SailScoresClubHomePage.png" />
     <None Include="wwwroot\js\build\guid.js" />
     <None Include="wwwroot\js\build\interfaces\server.js" />
     <None Include="wwwroot\js\build\raceEditor.js" />
