--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -15,6 +15,8 @@
     "gulp-concat": "2.6.1",
     "gulp-rename": "2.0.0",
     "gulp-sass": "6.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "merge-stream": "2.0.0",
     "sass": "1.49.9",
     "ts-loader": "9.4.2",
@@ -44,6 +46,7 @@
     "summernote": "0.8.20"
   },
   "scripts": {
-    "build": "gulp prebuild"
+    "build": "gulp prebuild",
+    "test": "jest"
   }
 }
